#927840: Add clear-block to dashboard HTML to ensure themes do not do weird things to it.
#941806: Fix incorrect link to configure mini panel on block config page.
#869766: Fix occasional problem with flexible layout pushing the entire layout to the left in certain fixed-width only configurations.
#949310: E_STRICT violation on declaration of render_pane() method of display renderers.

Panels 6.x-3.7 (2010-Jul-26)
==============
Experimentally introduced the In-Place Editor (IPE).
Updated Panels Stylizer to use CTools' new Export UI.
Deprecated panels_get_panels() function. This will be eventually disappear. Use panels_get_regions() instead.
#834084: Reusable flexible layout introduced. Admin UI at admin/build/panels/layouts.
Clean up flexible. Attempt to reduce the use of unnecessary divs. 
Add more ability to control flexible classes.
Add ability to fix flexible canvas to a set width.
Allow disabling of scaling for IE6 in flexible.
Fixes to IPE:
  Add pane would add the new pane outside region styling
  Add pane would not appear in empty regions
  Panes could not be dragged to empty regions
  Save would lose content if they were inside stylizer styled regions
#822234 by Amitaibu: Missing url() caused IPE to not work on sites not using top level URLs.
#844062: Turned the normal drag and drop editor into a renderer plugin, made the IPE part of it. Also some fairly serious code reorganization.
Improve the renderer selection framework. This framework has no UI, but it utilizes exportables and new choices can be hand crafted.
Improve the IPE to use the proper cache if it is set, and to respect locking.
#847784: IPE displayed "Edit" link when no such link should have existed.
#843758: Legacy renderer caused "missing argument" warning when rendering.
Made it possible to override jQuery UI sortable options via settings in the renderer plugin.
Moved Panels stylizer to CTools. You must update CTools at the same time as Panels.