@@ -579,7 +579,7 @@ class panels_renderer_editor extends panels_renderer_standard {
         $content_title = filter_xss_admin($content_type['title']);
 
         // Ensure content with the same title doesn't overwrite each other.
-        while (isset($categories['content'][$content_title])) {
+        while (isset($categories[$category_key]['content'][$content_title])) {
           $content_title .= '-';
         }
 
@@ -655,31 +655,34 @@ class panels_renderer_editor extends panels_renderer_standard {
       $output = '<div class="panels-categories-description">';
       $output .= t('Content options are divided by category. Please select a category from the left to proceed.');
       $output .= '</div>';
-      return $output;
+    }
+    else {
+      $titles = array_keys($content);
+      natcasesort($titles);
+
+      // Fill out the info for our current category.
+      $columns = 2;
+      $col[1] = '';
+      $col[2] = '';
+
+      $col_size = count($titles) / $columns;
+      $count = 0;
+      foreach ($titles as $title) {
+        $which = floor($count++ / $col_size) + 1; // we leave 0 for the categories.
+        $col[$which] .= $this->render_add_content_link($region, $content[$title]);
+      }
+
+      $output = '<div class="panels-section-columns">';
+      foreach ($col as $id => $column) {
+        $output .= '<div class="panels-section-column panels-section-column-' . $id . '">'
+        . '<div class="inside">' . $column . '</div></div>';
+      }
+      $output .= '</div>'; // columns
     }
 
-    $titles = array_keys($content);
-    natcasesort($titles);
-
-    // Fill out the info for our current category.
-    $columns = 2;
-    $col[1] = '';
-    $col[2] = '';
-
-    $col_size = count($titles) / $columns;
-    $count = 0;
-    foreach ($titles as $title) {
-      $which = floor($count++ / $col_size) + 1; // we leave 0 for the categories.
-      $col[$which] .= $this->render_add_content_link($region, $content[$title]);
+    if ($messages = theme('status_messages')) {
+      $output = '<div class="messages">' . $messages . '</div>' . $output;
     }
-
-    $output = '<div class="panels-section-columns">';
-    foreach ($col as $id => $column) {
-      $output .= '<div class="panels-section-column panels-section-column-' . $id . '">'
-      . '<div class="inside">' . $column . '</div></div>';
-    }
-    $output .= '</div>'; // columns
-
     return $output;
   }
 
